--- a/src/main/resources/assets/hypixelsays/lang/en_US.lang
+++ b/src/main/resources/assets/hypixelsays/lang/en_US.lang
@@ -5,8 +5,8 @@ language.name=English
 language.region=US
 language.code=en_US
 
-gui.config.general=Hypixel Says
-gui.config.general.tooltip=Hypixel Says Configuration Options
+gui.config.general=Highpixel Speed
+gui.config.general.tooltip=Highpixel Speed Configuration Options
 gui.config.autododge=Auto Dodge
 gui.config.autododge.tooltip=Auto Dodge Configuration Options
 gui.config.blacklist=Blacklist
