Add Session Stats rendering Give Session Stats its own config category Add Session Stats saving Remove command action outside Hypixel

--- a/src/main/resources/assets/highpixelspeed/lang/en_US.lang
+++ b/src/main/resources/assets/highpixelspeed/lang/en_US.lang
@@ -11,3 +11,5 @@ gui.config.autododge=Auto Dodge
 gui.config.autododge.tooltip=Auto Dodge Configuration Options
 gui.config.blacklist=Blacklist
 gui.config.blacklist.tooltip=Blacklist Configuration Options
+gui.config.stats=Session Stats
+gui.config.stats.tooltip=Session Stats Configuration Options
