--- a/src/main/resources/assets/highpixelspeed/lang/en_US.lang
+++ b/src/main/resources/assets/highpixelspeed/lang/en_US.lang
@@ -11,5 +11,7 @@ gui.config.autododge=Auto Dodge
 gui.config.autododge.tooltip=Auto Dodge Configuration Options
 gui.config.blacklist=Blacklist
 gui.config.blacklist.tooltip=Blacklist Configuration Options
+gui.config.speedrun=Speedrun
+gui.config.speedrun.tooltip=Speedrun Configuration Options
 gui.config.stats=Session Stats
 gui.config.stats.tooltip=Session Stats Configuration Options
